--- a/assets/scss/scss-master/master-global/global-wizard.scss
+++ b/assets/scss/scss-master/master-global/global-wizard.scss
@@ -2598,7 +2598,9 @@
                                     }
 
                                     .form-value {
-                                        @include mx-5;
+                                        @include text-align-center;
+
+                                        width                       : calc(115 / var(--vw) * var(--multiplier));
 
                                         .value {
                                             > span {
